@@ -594,4 +594,6 @@ different panes. Tie/untie option added for notes. Broken rhythm
 - Added Copy to Tune list right button menu
 - Update to abc2xml version 233
 - Chinese translation added (thanks Wu Xiaotian)
+- ABC settings: appears slightly faster and some space was added between controls and the border
+
 
